samples/_failures_safe/1761199392_aa87c9_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1a6bf564.c:168:1: error: expected identifier or ‘(’ at end of input
  168 | void
      | ^~~~
